# Gang

./: .gitattributes  .gitignore  .npmrc  .versionrc.json  CHANGELOG.md  README.md  RELEASE_NOTES_v1.0.0.md  capacitor.config.ts  index.html  package.json  tailwind.config.js  vite.config.ts
electron/: main.ts  preload.ts
screenshots/: .gitkeep
scripts/: create-github-release.ps1  create-release.ps1  setup-android-env.ps1
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main-window.json
src-tauri/permissions/: main-window.toml
src-tauri/src/: commands.rs  constants.rs  error.rs  http_client.rs  lib.rs  main.rs  proxy.rs
src/api/: bilibili.ts
src/api/request/: index.ts
src/components/: AudioWaveform.tsx  Drawer.tsx  FavoritesDrawer.tsx  PlayerControls.tsx  Playlist.tsx  PlaylistDrawer.tsx  Settings.tsx  TitleBar.tsx  Toast.tsx
src/components/icons/: GangTypeIcon.tsx
src/constants/: index.ts
src/store/: favorites.ts  player.ts  settings.ts
src/types/: index.ts
src/utils/: cache.ts  format.ts  platform.ts  video.ts
